--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,8 +8,7 @@
 
 /* Create at least one id, apply it to an element, and style it.  */
 #title_style_id {
-    color: black;
-    font-size: 20px;
+    color: orange;
 }
 
 /* Use a CSS selector to apply style(s) to at least one HTML tag. */
@@ -29,4 +28,29 @@ a:hover {
     text-decoration: underline;
 }
 
+.outer_box {
+    font-size: 30px;
+    width: 300px;           
+    height: 200px;          
+    padding: 20px;          
+    margin: 30px;           
+    border: 5px solid red;
+}
 
+.middle_box {
+    font-size: 15px;
+    width: 300px;           
+    height: 200px;          
+    padding: 20px;          
+    margin: 30px;           
+    border: 5px solid orange;
+}
+
+.inner_box {
+    font-size: 15px;
+    width: 300px;           
+    height: 200px;          
+    padding: 20px;          
+    margin: 30px;           
+    border: 5px solid yellow;
+}
